--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -238,6 +238,23 @@
                             app:customFont="@string/roboto_medium"
                             tools:text=" 12:30 pm" />
                     </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/appointmentTypeLinearLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <com.rescribe.doctor.ui.customesViews.CustomTextView
+                            android:id="@+id/appointmentTypeTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="Appointment Time - "
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/sp12"
+                            app:customFont="@string/roboto_medium" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </RelativeLayout>
