--- a/app/src/main/res/layout/activity_add_opd.xml
+++ b/app/src/main/res/layout/activity_add_opd.xml
@@ -1,9 +1,11 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    tools:context=".ui.activities.add_opd.AddOpdActivity"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,10 +22,9 @@
             app:tabGravity="fill"
             app:tabMaxWidth="@dimen/dp0"
             app:tabMode="scrollable"
-            app:tabTextAppearance="@style/tabTextSize" />
+            app:tabTextAppearance="@style/tabTextSizeOPD" />
 
     </android.support.design.widget.AppBarLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,16 +37,6 @@
             android:layout_alignParentTop="true"
             android:background="@color/white"
             android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/noRecords"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:visibility="gone"
-                app:srcCompat="@drawable/no_records_found"
-                tools:visibility="visible" />
-
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
@@ -53,60 +44,33 @@
 
         </RelativeLayout>
 
+
         <LinearLayout
             android:id="@+id/footer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp40"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp10"
             android:orientation="horizontal"
             android:paddingStart="@dimen/dp2"
             android:paddingEnd="@dimen/dp2"
             android:paddingBottom="@dimen/dp2">
 
             <Button
-                android:id="@+id/addRecordButton"
+                android:id="@+id/opdSaveButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp2"
                 android:layout_weight="1"
                 android:background="@drawable/button_selector"
                 android:fontFamily="@font/roboto_bold"
-                android:text="@string/add_record"
+                android:text="@string/save"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp14"
                 android:visibility="visible"
                 tools:visibility="visible" />
-
-            <Button
-                android:id="@+id/addNoteButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp2"
-                android:layout_weight="1"
-                android:background="@drawable/button_selector"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/add_note"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp14"
-                android:visibility="visible"
-                tools:visibility="gone" />
-
-            <Button
-                android:id="@+id/addOPDButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp2"
-                android:layout_weight="1"
-                android:background="@drawable/button_selector"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/add_opd"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp14"
-                android:visibility="visible"
-                tools:visibility="gone" />
-
         </LinearLayout>
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
