--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,10 @@
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/black</item>
         <item name="colorControlHighlight">@color/black</item>
+
     </style>
+
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -203,7 +206,13 @@
     </style>
 
     <style name="tabTextSize" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">@dimen/sp16</item>
+    <item name="android:textSize">@dimen/sp16</item>
+    <item name="android:fontFamily">@font/roboto_medium</item>
+</style>
+
+
+    <style name="tabTextSizeOPD" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/sp13</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
