--- a/app/src/main/res/layout/fragment_prescription.xml
+++ b/app/src/main/res/layout/fragment_prescription.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.fragments.add_opd.PrescriptionFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -14,6 +15,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,24 +23,40 @@
 
         <ImageButton
             android:id="@+id/miceButton"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_margin="@dimen/dp8"
+            android:layout_width="60dp"
+            android:layout_height="52dp"
+            android:layout_margin="@dimen/dp16"
+            android:background="@color/transparent"
             android:contentDescription="@string/mice"
             android:scaleType="centerInside"
-            app:srcCompat="@drawable/microphone_voice"
-            tools:layout_editor_absoluteX="97dp"
-            tools:layout_editor_absoluteY="40dp" />
+            app:srcCompat="@drawable/microphone_voice" />
 
         <ImageButton
             android:id="@+id/addButton"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_margin="@dimen/dp8"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="@dimen/dp16"
+            android:background="@color/transparent"
             android:contentDescription="@string/add"
-            app:srcCompat="@drawable/bsp_ic_add_circle_view_24dp"
-            tools:layout_editor_absoluteX="166dp"
-            tools:layout_editor_absoluteY="40dp" />
+            app:srcCompat="@drawable/ic_add_circle_black" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </android.support.constraint.ConstraintLayout>
