--- a/app/src/main/res/layout/fragment_add_opd_container.xml
+++ b/app/src/main/res/layout/fragment_add_opd_container.xml
@@ -5,11 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/layoutUnableSettings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_margin="@dimen/dp10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enable_opd_settings"
+            android:textSize="@dimen/dp16"
+            android:textColor="@color/black"
+            android:gravity="center"
+            />
+    </LinearLayout>
+
+
 
     <RelativeLayout
+        android:id="@+id/layoutMain"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent">
-
         <ImageButton
             android:id="@+id/imageButtonMice"
             android:layout_width="wrap_content"
@@ -18,7 +37,6 @@
             android:layout_marginTop="@dimen/dp20"
             android:background="@color/transparent"
             app:srcCompat="@drawable/microphone_voice" />
-
         <RelativeLayout
             android:id="@+id/layoutSearch"
             android:layout_width="match_parent"
@@ -33,32 +51,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dp5">
+                android:layout_marginStart="@dimen/dp5"
+                android:layout_marginEnd="@dimen/dp5"
+                android:background="@null"
+                android:layout_toLeftOf="@id/imageButtonClare"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                app:theme="@style/text_edit"
+                android:focusedByDefault="false"
+                android:layout_toStartOf="@id/imageButtonClare">
 
                 <AutoCompleteTextView
                     android:id="@+id/editSearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@null"
                     android:ellipsize="end"
                     android:hint="@string/search"
+                    android:padding="@dimen/dp5"
+                    android:focusedByDefault="false"
                     android:imeOptions="actionNext"
                     android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:textSize="@dimen/sp13" />
 
             </android.support.design.widget.TextInputLayout>
 
-
-
-
-            <!--<EditText-->
-                <!--android:id="@+id/editSearch"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:hint="@string/search"-->
-                <!--android:background="@android:color/transparent"-->
-                <!--android:textCursorDrawable="@drawable/cursor_color_blue"-->
-                <!--android:textSize="@dimen/sp15" />-->
 
             <View
                 android:layout_width="match_parent"
@@ -75,6 +94,7 @@
                 android:layout_centerVertical="true"
                 android:background="@color/transparent"
                 android:padding="@dimen/dp5"
+                android:visibility="gone"
                 android:src="@drawable/ic_add_action"
                 android:tint="@color/black" />
 
@@ -85,21 +105,127 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/dp5"
                 android:layout_marginRight="@dimen/dp5"
+                android:visibility="gone"
                 android:layout_toLeftOf="@id/imageButtonAddMore"
                 android:background="@color/transparent"
                 android:padding="@dimen/dp5"
                 android:src="@drawable/close_btn"
-                android:tint="@color/black" />
+                android:tint="@color/black"
+                android:layout_toStartOf="@id/imageButtonAddMore" />
 
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/layoutDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutSearch"
+            android:layout_marginLeft="@dimen/dp10"
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_marginRight="@dimen/dp10"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="@dimen/dp0"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/TextInputLayoutNoOfDays"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/dp5"
+                    android:layout_marginLeft="@dimen/dp5"
+                    android:background="@null"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    app:theme="@style/text_edit">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/editNoOfDays"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:ellipsize="end"
+                        android:hint="@string/number"
+                        android:imeOptions="actionNext"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey"
+                        android:padding="@dimen/dp5"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textSize="@dimen/sp13" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp1"
+                    android:layout_marginTop="@dimen/dp5"
+                    android:background="@color/grey" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="@dimen/dp0"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+                <Spinner
+                    android:id="@+id/spinnerDayPeriod"
+                    style="@style/Spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp16"
+                    android:layout_marginLeft="@dimen/dp16"
+                    android:layout_marginBottom="@dimen/dp5"
+                    android:padding="@dimen/dp5"
+                    android:entries="@array/complaints_period_entries" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp1"
+                    android:layout_marginTop="@dimen/dp7"
+                    android:layout_marginStart="@dimen/dp16"
+                    android:layout_marginLeft="@dimen/dp16"
+                    android:background="@color/grey" />
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+
+
+
+        <TextView
+            android:id="@+id/textOpdListHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Header"
+            android:visibility="gone"
+            android:padding="@dimen/dp3"
+            android:textSize="@dimen/sp16"
+            android:layout_below="@id/layoutDuration"
+            android:textColor="@color/solid_black"
+            android:layout_marginLeft="@dimen/dp10"
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_marginRight="@dimen/dp10"
+            android:background="@color/toolbar_divider_color"
+            />
+
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewOpdHeader"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/layoutSearch"
             android:layout_above="@id/footer"
-            android:layout_margin="@dimen/dp10"
-            />
+            android:layout_below="@id/textOpdListHeader"
+            android:layout_margin="@dimen/dp10" />
 
     </RelativeLayout>
 
